# flatstream-rs

./: .gitignore  BENCHMARKING_GUIDE.md  BENCHMARK_COMPARISON.md  Cargo.toml  DESIGN_EVOLUTION.md  DEVELOPMENT.md  GENERATED_README.md  GUIDE.md  OLD_README.md  README.md  V2_5_MIGRATION_GUIDE.md  bench_results.comparative.txt  bench_results.memory_policy.txt  bench_results.simple.txt  bench_results.txt  v2_final_benchmarks.txt
benches/: adapters_micro.rs  benchmarks.rs  comparative_benchmarks.rs  file_io_pressure_benchmark.rs  instruction_count.rs  lobster_benchmark.rs  long_running_agent_benchmark.rs  memory_policy_benchmarks.rs  memory_pressure_benchmark.rs  simple_benchmarks.rs  sustained_performance_benchmark.rs  trait_dispatch_overhead.rs  typed_vs_manual_benchmark.rs  validation_benchmarks.rs  write_path_benchmarks.rs
docs/: DESIGN_EVOLUTION.md  DESIGN_v2_5.md  DESIGN_v2_6.md  DESIGN_v2_7.md  DEVELOPMENT.md  WIRE_FORMAT_SPEC.md  ZERO_COPY_ANALYSIS.md
docs/archive/: DEVELOPMENT.md  OLD_GUIDE.md  OLD_README.md  V2_5_IMPLEMENTATION_REPORT.md  V2_7_ADAPTIVE_MEMORY_POLICY.md  V2_7_READER_ERGO.md  V2_7_VALIDATION.md
docs/benchmark/: BENCHMARKING_GUIDE.md  BENCHMARK_COMPARISON.md
docs/planning/: ARENA_ALLOCATION_RESEARCH.md  V2_7_ADAPTIVE_MEMORY_POLICY.md  V2_7_VALIDATION.md  V2_X_BOXED_TRAITS.md  V2_X_FLUENT_BUILDER.md  V2_X_READER_ERGO.md  V2_X_VALIDATION_V1.md  V2_X_VALIDATION_V2.md  V2_X_VALIDATION_V3.md  V3_SCHEMA_AWARE.md  V3_VECTOR_IO.md
examples/: adaptive_policy.rs  arena_allocation_example.rs  bounded_adapters_example.rs  composable_example.rs  crc32_example.rs  custom_allocator_example.rs  custom_framer_example.rs  ergonomics_example.rs  expert_mode_example.rs  expert_processing_example.rs  ingest_lobster.rs  multiple_builders_example.rs  observer_adapters_example.rs  performance_example.rs  read_optimization_example.rs  sized_checksums_example.rs  telemetry_agent.rs  typed_reading_example.rs  typed_reading_flatc_example.rs  validation_example.rs
examples/schemas/: lobster_message.fbs  lobster_orderbook.fbs  telemetry.fbs
experiments/OLD_v2_benches/: benchmarks.rs
experiments/v2_6/: ACTUAL_RUN_RESULTS.md  README.md  RESULTS.md  VERIFICATION_RESULTS.md  builder_reuse_verification.rs  checksum_performance_comparison.rs  error_handling_verification.rs  large_message_test.rs  memory_usage_test.rs  overhead_analysis.rs  performance_comparison.rs  throughput_measurement.rs  trait_composability_demo.rs  wire_format_verification.rs  zero_copy_verification.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deframe_checksum_fuzzer.rs  deframe_fuzzer.rs
fuzzers/fuzz/: Cargo.toml
fuzzers/fuzz/fuzz_targets/: deframe_fuzzer.rs
fuzzers/hfuzz/: Cargo.toml
fuzzers/hfuzz/src/: deframe_hfuzz.rs
scripts/: examples.sh  fuzz.sh  gate.sh  instruction_counts.sh  miri.sh
src/: checksum.rs  error.rs  framing.rs  lib.rs  policy.rs  reader.rs  recover.rs  traits.rs  validation.rs  writer.rs
tests/: adapter_composition_tests.rs  adapters_and_ergonomics_tests.rs  core_read_write.rs  deframer_equivalence.rs  deframer_integration_tests.rs  error_handling_tests.rs  generate_corpus.rs  integration_tests.rs  io_fault_injection.rs  lobster_integration_test.rs  memory_policy_integration.rs  nested_validation.rs  no_alloc_invariants.rs  property_roundtrip.rs  recovery_tests.rs  robustness_tests.rs  sized_checksums_strategy.rs  stream_deserialize_integration_tests.rs  test_harness.rs  unsafe_deframer_edge_cases.rs  validation_integration.rs  wire_format_corpus.rs  wire_format_tests.rs
tests/corpus/: crc16_medium.hex  crc16_small.hex  crc32_medium.hex  crc32_small.hex  default_medium.hex  default_small.hex  xxhash64_empty.hex  xxhash64_medium.hex  xxhash64_small.hex
tests/corpus/lobster/zips/: SHASUMS.txt
tests/harness/: faulty_reader.rs  lobster_common.rs
v2_benches/: benchmarks.rs
