[package]
name = "flatstream"
version = "0.2.7"
edition = "2021"
authors = ["Dallas Marlow <dallas@example.com>"]
description = "High-performance FlatBuffers streaming with data integrity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dallasmarlow/flatstream-rs"
keywords = ["flatbuffers", "streaming", "serialization", "checksum", "telemetry"]
categories = ["encoding", "data-structures"]
publish = false  # Initially for private repo

[dependencies]
flatbuffers = "24.3.25"
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }
bumpalo = { version = "3.14", optional = true }

[features]
default = []
xxhash = ["xxhash-rust"]
crc32 = ["crc32fast"]
crc16 = ["dep:crc16"]
# Meta-feature to enable all checksum algorithms for testing and development
all_checksums = ["xxhash", "crc32", "crc16"]
# Feature for comparative benchmarks against alternative serialization approaches
comparative_bench = ["serde", "bincode", "serde_json", "bumpalo", "xxhash", "crc32", "crc16"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]
optional = true

[dependencies.crc32fast]
version = "1.4"
optional = true

[dependencies.crc16]
version = "0.4"
optional = true

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comparative_benchmarks"
harness = false
required-features = ["comparative_bench"]

[[bench]]
name = "write_path_benchmarks"
harness = false

[[bench]]
name = "memory_pressure_benchmark"
harness = false

[[bench]]
name = "file_io_pressure_benchmark"
harness = false

[[bench]]
name = "long_running_agent_benchmark"
harness = false

[[bench]]
name = "sustained_performance_benchmark"
harness = false

[[bench]]
name = "adapters_micro"
harness = false

[[bench]]
name = "simple_benchmarks"
harness = false
required-features = ["comparative_bench"]