[package]
name = "flatstream"
version = "0.2.7"
edition = "2021"
rust-version = "1.87"
authors = ["Dallas Marlow <dallasmarlow@gmail.com>"]
description = "High-performance FlatBuffers streaming with data integrity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dallasmarlow/flatstream-rs"
keywords = ["flatbuffers", "streaming", "serialization", "checksum", "telemetry"]
categories = ["encoding", "data-structures"]
publish = false  # Initially for private repo

[dependencies]
flatbuffers = "25.9.23"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }
bumpalo = { version = "3.14", optional = true }

[features]
default = []
xxhash = ["xxhash-rust"]
crc32 = ["crc32fast"]
crc16 = ["dep:crc16"]
# Build the real flatc-generated example (requires you to run flatc to generate code under examples/generated)
flatc_example = []
unsafe_typed = []
# Meta-feature to enable all checksum algorithms for testing and development
all_checksums = ["xxhash", "crc32", "crc16"]
# Opt-in for the Gungraun instruction-count bench (requires valgrind/Linux;
# run via scripts/instruction_counts.sh)
instruction_bench = []
# Feature for comparative benchmarks against alternative serialization approaches
comparative_bench = ["serde", "bincode", "serde_json", "bumpalo", "xxhash", "crc32", "crc16"]
lobster = []

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]
optional = true

[dependencies.crc32fast]
version = "1.4"
optional = true

[dependencies.crc16]
version = "0.4"
optional = true

[dev-dependencies]
# Deterministic instruction counts under valgrind/callgrind (Linux-only; the
# installed gungraun-runner must match this version — see
# scripts/instruction_counts.sh).
gungraun = "0.19.4"
# Gungraun's broad transitive range also admits bincode-next 3.x, whose MSRV
# exceeds the pinned Rust 1.87 instruction-count container.
bincode-next = { version = "=2.1.0", default-features = false, features = ["serde", "std"] }
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
rand = "0.8"
csv = "1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comparative_benchmarks"
harness = false
required-features = ["comparative_bench"]

[[bench]]
name = "write_path_benchmarks"
harness = false

[[bench]]
name = "memory_pressure_benchmark"
harness = false

[[bench]]
name = "file_io_pressure_benchmark"
harness = false

[[bench]]
name = "long_running_agent_benchmark"
harness = false

[[bench]]
name = "sustained_performance_benchmark"
harness = false

[[bench]]
name = "adapters_micro"
harness = false

[[bench]]
name = "simple_benchmarks"
harness = false
required-features = ["comparative_bench"]

[[bench]]
name = "typed_vs_manual_benchmark"
harness = false

[[bench]]
name = "lobster_benchmark"
harness = false
required-features = ["lobster"]

[[bench]]
name = "trait_dispatch_overhead"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "memory_policy_benchmarks"
harness = false

[[bench]]
name = "instruction_count"
harness = false
required-features = ["instruction_bench", "all_checksums"]

[[example]]
name = "typed_reading_flatc_example"
required-features = ["flatc_example"]

[[example]]
name = "ingest_lobster"
required-features = ["lobster"]
